Added in configure flags to support Wasatch component:
--with-spatialops
--with-exprlib

M    CCA/Components/Wasatch/sub.mk

* Commented out hard coded paths... James, feel free to remove that entire
  block when things are working for you.

M    StandAlone/sub.mk

* Link in boost if it is configured.

M    configure.ac
M    configure
M    configVars.mk.in

* Fixes for handling spatialops, exprlib, tabprops, and boost.

--- a/configVars.mk.in
+++ b/configVars.mk.in
@@ -140,6 +140,21 @@ MALLOC_TRACE_LIBRARY = @MALLOC_TRACE_LIB_DIR_FLAG@ @MALLOC_TRACE_LIB_FLAG@
 ZOLTAN_INCLUDE = @INC_ZOLTAN_H@
 ZOLTAN_LIBRARY = @ZOLTAN_LIB_DIR_FLAG@ @ZOLTAN_LIB_FLAG@
 
+# Boost
+HAVE_BOOST    := @HAVE_BOOST@
+BOOST_INCLUDE := @INC_BOOST_H@
+BOOST_LIBRARY := @BOOST_LIB_DIR_FLAG@ @BOOST_LIB_FLAG@
+
+# SpatialOps
+HAVE_SPATIALOPS    := @HAVE_SPATIALOPS@
+SPATIALOPS_INCLUDE := @INC_SPATIALOPS_H@
+SPATIALOPS_LIBRARY := @SPATIALOPS_LIB_DIR_FLAG@ @SPATIALOPS_LIB_FLAG@
+
+# ExprLib
+HAVE_EXPRLIB    := @HAVE_EXPRLIB@
+EXPRLIB_INCLUDE := @INC_EXPRLIB_H@
+EXPRLIB_LIBRARY := @EXPRLIB_LIB_DIR_FLAG@ @EXPRLIB_LIB_FLAG@
+
 # TabProps
 TABPROPS_INCLUDE =  @INC_TABPROPS_H@
 TABPROPS_LIBRARY =  @TABPROPS_LIB_DIR_FLAG@ @TABPROPS_LIB_FLAG@
