--- a/src/configVars.mk.in
+++ b/src/configVars.mk.in
@@ -140,6 +140,21 @@ MALLOC_TRACE_LIBRARY = @MALLOC_TRACE_LIB_DIR_FLAG@ @MALLOC_TRACE_LIB_FLAG@
 ZOLTAN_INCLUDE = @INC_ZOLTAN_H@
 ZOLTAN_LIBRARY = @ZOLTAN_LIB_DIR_FLAG@ @ZOLTAN_LIB_FLAG@
 
+# Boost
+HAVE_BOOST    := @HAVE_BOOST@
+BOOST_INCLUDE := @INC_BOOST_H@
+BOOST_LIBRARY := @BOOST_LIB_DIR_FLAG@ @BOOST_LIB_FLAG@
+
+# SpatialOps
+HAVE_SPATIALOPS    := @HAVE_SPATIALOPS@
+SPATIALOPS_INCLUDE := @INC_SPATIALOPS_H@
+SPATIALOPS_LIBRARY := @SPATIALOPS_LIB_DIR_FLAG@ @SPATIALOPS_LIB_FLAG@
+
+# ExprLib
+HAVE_EXPRLIB    := @HAVE_EXPRLIB@
+EXPRLIB_INCLUDE := @INC_EXPRLIB_H@
+EXPRLIB_LIBRARY := @EXPRLIB_LIB_DIR_FLAG@ @EXPRLIB_LIB_FLAG@
+
 # TabProps
 TABPROPS_INCLUDE =  @INC_TABPROPS_H@
 TABPROPS_LIBRARY =  @TABPROPS_LIB_DIR_FLAG@ @TABPROPS_LIB_FLAG@
