--- a/src/R_Tester/helpers/build
+++ b/src/R_Tester/helpers/build
@@ -25,7 +25,7 @@ if [ "$OS" == "Linux" ]; then
        --with-exprlib=/usr/local/home/jsutherland/UintahTPL \\
        --with-spatialops=/usr/local/home/jsutherland/UintahTPL \\
        --with-boost=/usr/local/share/wasatch/Boost-Install/1.44/gcc4.3.2 \\
-       USE_WASATCH=yes \\"
+       USE_WASATCH=no \\"
   
   ENV="      CC=gcc-4.2 \\
        CXX=g++-4.2 \\
