makefile:   - pass in SRCTOP_ABS to startLocalTester
startLocalTest
  - using SRCTOP_ABS for paths to symbolic links
  - changed dialog window geometry for OSX
  
generateGoldStandards
  - throw error if version of python is < 2.4
  - use python in the users path , not /usr/bin
  
selectComponents
  - changed dialog window geometry for OSX

runSusTests
  - hardening: compare OS strings in all uppercase
  - New version of python crash if you try to access an environmental variable
    that does not exist.  Set default values of outputpath & weboutputpath, modify
    if nightly test is being run.

--- a/Makefile.in
+++ b/Makefile.in
@@ -285,4 +285,4 @@ gold_standards :
 #  to execute the local regression tester
 runLocalRT:
 	@cd $(OBJTOP_ABS)
-	@$(SRCTOP)/R_Tester/toplevel/startLocalTest $(OBJTOP_ABS)
+	@$(SRCTOP)/R_Tester/toplevel/startLocalTest $(OBJTOP_ABS) $(SRCTOP_ABS)
